[package]
name = "atcoder"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'abc198d'
path = 'src/abc198d.rs'

[[bin]]
name = 'abc200c'
path = 'src/abc200c.rs'

[[bin]]
name = 'abc200d'
path = 'src/abc200d.rs'

[[bin]]
name = 'pakencamp2019day3c'
path = 'src/pakencamp2019day3c.rs'

[[bin]]
name = 'aizeITP1_7_B'
path = 'src/aizeITP1_7_B.rs'

[[bin]]
name = 'sumitrust2019d'
path = 'src/sumitrust2019d.rs'

[[bin]]
name = 'joi2007hoc'
path = 'src/joi2007hoc.rs'

[dependencies]
whiteread = '0.5.0'
itertools = '0.9.0'
