[package]
name = "atcoder"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'abc198d'
path = 'src/abc198d.rs'

[[bin]]
name = 'abc200c'
path = 'src/abc200c.rs'

[[bin]]
name = 'abc200d'
path = 'src/abc200d.rs'

[[bin]]
name = 'pakencamp2019day3c'
path = 'src/pakencamp2019day3c.rs'

[[bin]]
name = 'aizeITP1_7_B'
path = 'src/aizeITP1_7_B.rs'

[[bin]]
name = 'sumitrust2019d'
path = 'src/sumitrust2019d.rs'

[[bin]]
name = 'joi2007hoc'
path = 'src/joi2007hoc.rs'

[[bin]]
name = 'abc201c'
path = 'src/abc201c.rs'

[[bin]]
name = 'abc201d'
path = 'src/abc201d.rs'

[[bin]]
# square869120 Contest #6
name = 's8pc_6_b'
path = 'src/s8pc_6_b.rs'

[[bin]]
name = 'joi2008yo_d'
path = 'src/joi2008yo_d.rs'

[[bin]]
name = 'aizu_ALDS1_5_A'
path = 'src/aizu_ALDS1_5_A.rs'

[[bin]]
name = 'abc128c'
path = 'src/abc128c.rs'

[[bin]]
name = 'abc202c'
path = 'src/abc202c.rs'

[[bin]]
name = 'abc202d'
path = 'src/abc202d.rs'

[[bin]]
name = 'abc202e'
path = 'src/abc202e.rs'

[[bin]]
name = 'abc002d'
path = 'src/abc002d.rs'

[[bin]]
name = 'joi2008yo_e'
path = 'src/joi2008yo_e.rs'

[[bin]]
name = 's8pc_4_b'
path = 'src/s8pc_4_b.rs'

[[bin]]
name = 'abc145c'
path = 'src/abc145c.rs'

[[bin]]
name = 'abc150c'
path = 'src/abc150c.rs'

[[bin]]
name = 'joi2009hob'
path = 'src/joi2009hob.rs'

[dependencies]
whiteread = '0.5.0'
itertools = '0.9.0'
