[package]
name = "atcoder"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whiteread = '0.5.0'
itertools = '0.9.0'

# see also https://nnethercote.github.io/perf-book/profiling.html
